--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -69,7 +69,7 @@
               <p><span>Owner: </span>Aladdin</p>
             </div>
             <div class="description">
-              <p>Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light.</p>
+              <p>Our stylish space features a comfortable living area, well-equipped kitchenette, and a tranquil bedroom with a queen-sized bed. Enjoy stunning city views from the private balcony. Conveniently located near cafes, restaurants, and attractions, it's the perfect home base for your stay. Book now for comfort and convenience!</p>
             </div>
           </article>
           <article>
@@ -92,7 +92,7 @@
               <p><span>Owner: </span>John Lennon</p>
             </div>
             <div class="description">
-              <p>Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light.</p>
+              <p>Our stylish space features a comfortable living area, well-equipped kitchenette, and a tranquil bedroom with a queen-sized bed. Enjoy stunning city views from the private balcony. Conveniently located near cafes, restaurants, and attractions, it's the perfect home base for your stay. Book now for comfort and convenience!</p>
             </div>
           </article>
           <article>
@@ -115,7 +115,7 @@
               <p><span>Owner: </span>Adrienne</p>
             </div>
             <div class="description">
-              <p>Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light. Really nice room with lots of light.</p>
+              <p>Our stylish space features a comfortable living area, well-equipped kitchenette, and a tranquil bedroom with a queen-sized bed. Enjoy stunning city views from the private balcony. Conveniently located near cafes, restaurants, and attractions, it's the perfect home base for your stay. Book now for comfort and convenience!</p>
             </div>
           </article>
         </div>
